--- a/backend/package.json
+++ b/backend/package.json
@@ -1,21 +1,12 @@
 {
-  "name": "my-app",
+  "name": "backend",
   "version": "1.0.0",
-  "main": "expo/AppEntry.js",
+  "description": "",
+  "main": "index.js",
   "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
-    "web": "expo start --web"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "dependencies": {
-    "expo": "~51.0.8",
-    "expo-status-bar": "~1.12.1",
-    "react": "18.2.0",
-    "react-native": "0.74.1"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.20.0"
-  },
-  "private": true
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
