--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,16 +15,17 @@
     "@react-navigation/native-stack": "^6.9.26",
     "axios": "^1.6.8",
     "expo": "~51.0.6",
+    "expo-device": "~6.0.2",
+    "expo-location": "~17.0.1",
     "expo-status-bar": "~1.12.1",
+    "firebase": "^10.12.1",
     "moment": "^2.30.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.1",
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
-    "react-native-web": "~0.19.10",
-    "expo-location": "~17.0.1",
-    "expo-device": "~6.0.2"
+    "react-native-web": "~0.19.10"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
